--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.data.mongodb.uri=mongodb+srv://haresahani:haresahani@cluster0.d2rcuhq.mon
 
 spring.data.mongodb.database=journaldb
 spring.data.mongodb.auto-index-creation=true
+logging.level.org.springframework.security=DEBUG
